<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.roberto.tp_final.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Clima en"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/temp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvTemperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/humedad"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHumedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/presion"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvPresion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/temp_max"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvTMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/temp_min"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvTMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>

</LinearLayout>